--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,11 +76,40 @@
                 </table>
             </div>
         </div>
-        <div>
-            <label for="bench">Bench press - weight:</label>
-            <input name="bench" id="bench" type="range" min="1" max="200" value="100" class="slider"
-                   onchange=""><br/>
-            <label for="bench-text"></label><input type="text" id="bench-text" value="100">
+        <div class="overall-strength">
+            <div class="overall-strength-weight">
+                <label for="bench-weight-slider">Bench press - weight</label>
+                <input name="bench-weight-slider" id="bench-weight-slider" type="range" min="1" max="250" value="125"
+                       step="0.5" class="slider overall-strength-weight"
+                       oninput="updateGS('bench-weight',this.value,'bench-weight','bench-reps','bench-max')"><br/>
+            </div>
+            <div class="overall-strength-reps">
+                <label for="bench-reps-slider">Reps</label>
+                <input name="bench-reps-slider" id="bench-reps-slider" type="range" min="1" max="19" value="1" step="1"
+                       class="slider overall-strength-reps"
+                       oninput="updateGS('bench-reps',this.value,'bench-weight','bench-reps','bench-max')"><br/>
+            </div>
+            <div class="overall-strength-text-inputs">
+                <table class="overall-strength-table">
+                    <tr>
+                        <td><label for="bench-weight">Weight</label></td>
+                        <td><input type="number" name="squat-weight" id="bench-weight" value="125" min="1"
+                                   max="250" step="0.5"
+                                   oninput="updateGS('bench-weight-slider',this.value,'bench-weight','bench-reps','bench-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="bench-reps">Reps</label></td>
+                        <td><input type="number" name="bench-reps" id="bench-reps" value="1" min="1" max="19"
+                                   oninput="updateGS('bench-reps-slider',this.value,'bench-weight','bench-reps','bench-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="bench-max">Max</label></td>
+                        <td><input type="text" id="bench-max" value="" readonly></td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div>
             <label for="deadlift">Deadlift - weight:</label>
