--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -146,12 +146,40 @@
                 </table>
             </div>
         </div>
-        <br/>
-        <div>
-            <label for="military">Military press - weight:</label>
-            <input name="military" id="military" type="range" min="1" max="150" value="75" class="slider"
-                   onchange=""><br/>
-            <label for="military-text"></label><input type="text" id="military-text" value="75">
+        <div class="overall-strength">
+            <div class="overall-strength-weight">
+                <label for="military-weight-slider">Military press - weight</label>
+                <input name="military-weight-slider" id="military-weight-slider" type="range" min="1" max="150" value="75"
+                       step="0.5" class="slider overall-strength-weight"
+                       oninput="updateGS('military-weight',this.value,'military-weight','military-reps','military-max')"><br/>
+            </div>
+            <div class="overall-strength-reps">
+                <label for="military-reps-slider">Reps</label>
+                <input name="military-reps-slider" id="military-reps-slider" type="range" min="1" max="19" value="1" step="1"
+                       class="slider overall-strength-reps"
+                       oninput="updateGS('military-reps',this.value,'military-weight','military-reps','military-max')"><br/>
+            </div>
+            <div class="overall-strength-text-inputs">
+                <table class="overall-strength-table">
+                    <tr>
+                        <td><label for="military-weight">Weight</label></td>
+                        <td><input type="number" name="squat-weight" id="military-weight" value="75" min="1"
+                                   max="150" step="0.5"
+                                   oninput="updateGS('military-weight-slider',this.value,'military-weight','military-reps','military-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="military-reps">Reps</label></td>
+                        <td><input type="number" name="military-reps" id="military-reps" value="1" min="1" max="19"
+                                   oninput="updateGS('military-reps-slider',this.value,'military-weight','military-reps','military-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="military-max">Max</label></td>
+                        <td><input type="text" id="military-max" value="" readonly></td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div>
             <label for="row">Barbell row - weight:</label>
