finish general strength barbell row section

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -163,7 +163,7 @@
                 <table class="overall-strength-table">
                     <tr>
                         <td><label for="military-weight">Weight</label></td>
-                        <td><input type="number" name="squat-weight" id="military-weight" value="75" min="1"
+                        <td><input type="number" name="military-weight" id="military-weight" value="75" min="1"
                                    max="150" step="0.5"
                                    oninput="updateGS('military-weight-slider',this.value,'military-weight','military-reps','military-max')">
                         </td>
@@ -181,10 +181,40 @@
                 </table>
             </div>
         </div>
-        <div>
-            <label for="row">Barbell row - weight:</label>
-            <input name="row" id="row" type="range" min="1" max="200" value="100" class="slider" onchange=""><br/>
-            <label for="row-text"></label><input type="text" id="row-text" value="100">
+        <div class="overall-strength">
+            <div class="overall-strength-weight">
+                <label for="row-weight-slider">Barbell row - weight</label>
+                <input name="row-weight-slider" id="row-weight-slider" type="range" min="1" max="200" value="100"
+                       step="0.5" class="slider overall-strength-weight"
+                       oninput="updateGS('row-weight',this.value,'row-weight','row-reps','row-max')"><br/>
+            </div>
+            <div class="overall-strength-reps">
+                <label for="row-reps-slider">Reps</label>
+                <input name="row-reps-slider" id="row-reps-slider" type="range" min="1" max="19" value="1" step="1"
+                       class="slider overall-strength-reps"
+                       oninput="updateGS('row-reps',this.value,'row-weight','row-reps','row-max')"><br/>
+            </div>
+            <div class="overall-strength-text-inputs">
+                <table class="overall-strength-table">
+                    <tr>
+                        <td><label for="row-weight">Weight</label></td>
+                        <td><input type="number" name="row-weight" id="row-weight" value="100" min="1"
+                                   max="200" step="0.5"
+                                   oninput="updateGS('row-weight-slider',this.value,'row-weight','row-reps','row-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="row-reps">Reps</label></td>
+                        <td><input type="number" name="row-reps" id="row-reps" value="1" min="1" max="19"
+                                   oninput="updateGS('row-reps-slider',this.value,'row-weight','row-reps','row-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="row-max">Max</label></td>
+                        <td><input type="text" id="row-max" value="" readonly></td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div>
             <label for="pullup">Pull-up - weight:</label>
