--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -216,11 +216,40 @@
                 </table>
             </div>
         </div>
-        <div>
-            <label for="pullup">Pull-up - weight:</label>
-            <input name="pullup" id="pullup" type="range" min="1" max="150" value="75" class="slider"
-                   onchange=""><br/>
-            <label for="pullup-text"></label><input type="text" id="pullup-text" value="75">
+        <div class="overall-strength">
+            <div class="overall-strength-weight">
+                <label for="pullup-weight-slider">Weighted pull-up - weight</label>
+                <input name="pullup-weight-slider" id="pullup-weight-slider" type="range" min="1" max="150" value="75"
+                       step="0.5" class="slider overall-strength-weight"
+                       oninput="updateGS('pullup-weight',this.value,'pullup-weight','pullup-reps','pullup-max')"><br/>
+            </div>
+            <div class="overall-strength-reps">
+                <label for="pullup-reps-slider">Reps</label>
+                <input name="pullup-reps-slider" id="pullup-reps-slider" type="range" min="1" max="19" value="1" step="1"
+                       class="slider overall-strength-reps"
+                       oninput="updateGS('pullup-reps',this.value,'pullup-weight','pullup-reps','pullup-max')"><br/>
+            </div>
+            <div class="overall-strength-text-inputs">
+                <table class="overall-strength-table">
+                    <tr>
+                        <td><label for="pullup-weight">Weight</label></td>
+                        <td><input type="number" name="pullup-weight" id="pullup-weight" value="75" min="1"
+                                   max="150" step="0.5"
+                                   oninput="updateGS('pullup-weight-slider',this.value,'pullup-weight','pullup-reps','pullup-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="pullup-reps">Reps</label></td>
+                        <td><input type="number" name="pullup-reps" id="pullup-reps" value="1" min="1" max="19"
+                                   oninput="updateGS('pullup-reps-slider',this.value,'pullup-weight','pullup-reps','pullup-max')">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label for="pullup-max">Max</label></td>
+                        <td><input type="text" id="pullup-max" value="" readonly></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 
