--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -265,7 +265,7 @@
         <br>
 
         <!--Weight slider-->
-        <div>
+        <div class="one-rep-max-inputs">
             <label for="weight">Weight lifted</label>
             <input name="weight" id="weight" type="range" min="1" max="200" value="100" class="slider" step="0.5"
                    oninput="update('weight-text',this.value)"><br/>
@@ -275,7 +275,7 @@
         <br/>
 
         <!--Number of reps performed slider-->
-        <div>
+        <div class="one-rep-max-inputs">
             <label for="reps">Number of reps:</label>
             <input name="reps" id="reps" type="range" min="1" max="19" value="10" class="slider" step="1"
                    oninput="update('reps-text',this.value)"><br/>
@@ -288,59 +288,88 @@
             <!--Percentages calculator-->
             <table id="percentages">
                 <tr>
-
                     <!--1 rep max result and "calculate" button-->
-                    <td class="centered" colspan="13">
+                    <td class="centered" colspan="4">
                         <label for="result">1 Rep Max - 100%:</label><input id="result" type="text" value="" readonly>
                         <button class="my-button" type="button" onclick="calculate1RM()">Calculate</button>
                     </td>
                 </tr>
                 <tr>
+                    <td><p class="percentage-description"></p></td>
                     <td><label for="percentage-input-1">%</label></td>
-                    <td><label for="percentage-input-2">%</label></td>
-                    <td><label for="percentage-input-3">%</label></td>
-                    <td><label for="percentage-input-4">%</label></td>
-                    <td><label for="percentage-input-5">%</label></td>
-                    <td><label for="percentage-input-6">%</label></td>
-                    <td><label for="percentage-input-7">%</label></td>
-                    <td><label for="percentage-input-8">%</label></td>
-                    <td><label for="percentage-input-9">%</label></td>
-                    <td><label for="percentage-input-10">%</label></td>
-                    <td><label for="percentage-input-11">%</label></td>
-                    <td><label for="percentage-input-12">%</label></td>
-                    <td><label for="percentage-input-13">%</label></td>
-                </tr>
-                <!--Predefined percentages, adjustable-->
-                <tr>
                     <td><input class="percentage-input" id="percentage-input-1" type="number" value="95"/></td>
-                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90"/></td>
-                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85"/></td>
-                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80"/></td>
-                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75"/></td>
-                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70"/></td>
-                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65"/></td>
-                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60"/></td>
-                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50"/></td>
-                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40"/></td>
-                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30"/></td>
-                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20"/></td>
-                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10"/></td>
-                </tr>
-
-                <!--Percentages calculation results-->
-                <tr>
                     <td id="percentage-1"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-2">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90"/></td>
                     <td id="percentage-2"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-3">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85"/></td>
                     <td id="percentage-3"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-4">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80"/></td>
                     <td id="percentage-4"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-5">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75"/></td>
                     <td id="percentage-5"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-6">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70"/></td>
                     <td id="percentage-6"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-7">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65"/></td>
                     <td id="percentage-7"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-8">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60"/></td>
                     <td id="percentage-8"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-9">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50"/></td>
                     <td id="percentage-9"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-10">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40"/></td>
                     <td id="percentage-10"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-11">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30"/></td>
                     <td id="percentage-11"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-12">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20"/></td>
                     <td id="percentage-12"></td>
+                </tr>
+                <tr>
+                    <td><p class="percentage-description"></p></td>
+                    <td><label for="percentage-input-13">%</label></td>
+                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10"/></td>
                     <td id="percentage-13"></td>
                 </tr>
             </table>
