add javascript function to update percentages descriptions

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -295,81 +295,94 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-1"></p></td>
                     <td><label for="percentage-input-1">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-1" type="number" value="95"/></td>
+                    <td><input class="percentage-input" id="percentage-input-1" type="number" value="95"
+                               onchange="updatePercentageDescription('percentage-description-1', this.value)"/></td>
                     <td id="percentage-1"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-2"></p></td>
                     <td><label for="percentage-input-2">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90"/></td>
+                    <td><input class="percentage-input" id="percentage-input-2" type="number" value="90"
+                               onchange="updatePercentageDescription('percentage-description-2', this.value)"/></td>
                     <td id="percentage-2"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-3"></p></td>
                     <td><label for="percentage-input-3">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85"/></td>
+                    <td><input class="percentage-input" id="percentage-input-3" type="number" value="85"
+                               onchange="updatePercentageDescription('percentage-description-3', this.value)"/></td>
                     <td id="percentage-3"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-4"></p></td>
                     <td><label for="percentage-input-4">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80"/></td>
+                    <td><input class="percentage-input" id="percentage-input-4" type="number" value="80"
+                               onchange="updatePercentageDescription('percentage-description-4', this.value)"/></td>
                     <td id="percentage-4"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-5"></p></td>
                     <td><label for="percentage-input-5">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75"/></td>
+                    <td><input class="percentage-input" id="percentage-input-5" type="number" value="75"
+                               onchange="updatePercentageDescription('percentage-description-5', this.value)"/></td>
                     <td id="percentage-5"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-6"></p></td>
                     <td><label for="percentage-input-6">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70"/></td>
+                    <td><input class="percentage-input" id="percentage-input-6" type="number" value="70"
+                               onchange="updatePercentageDescription('percentage-description-6', this.value)"/></td>
                     <td id="percentage-6"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-7"></p></td>
                     <td><label for="percentage-input-7">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65"/></td>
+                    <td><input class="percentage-input" id="percentage-input-7" type="number" value="65"
+                               onchange="updatePercentageDescription('percentage-description-7', this.value)"/></td>
                     <td id="percentage-7"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-8"></p></td>
                     <td><label for="percentage-input-8">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60"/></td>
+                    <td><input class="percentage-input" id="percentage-input-8" type="number" value="60"
+                               onchange="updatePercentageDescription('percentage-description-8', this.value)"/></td>
                     <td id="percentage-8"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-9"></p></td>
                     <td><label for="percentage-input-9">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50"/></td>
+                    <td><input class="percentage-input" id="percentage-input-9" type="number" value="50"
+                               onchange="updatePercentageDescription('percentage-description-9', this.value)"/></td>
                     <td id="percentage-9"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-10"></p></td>
                     <td><label for="percentage-input-10">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40"/></td>
+                    <td><input class="percentage-input" id="percentage-input-10" type="number" value="40"
+                               onchange="updatePercentageDescription('percentage-description-10', this.value)"/></td>
                     <td id="percentage-10"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-11"></p></td>
                     <td><label for="percentage-input-11">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30"/></td>
+                    <td><input class="percentage-input" id="percentage-input-11" type="number" value="30"
+                               onchange="updatePercentageDescription('percentage-description-11', this.value)"/></td>
                     <td id="percentage-11"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-12"></p></td>
                     <td><label for="percentage-input-12">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20"/></td>
+                    <td><input class="percentage-input" id="percentage-input-12" type="number" value="20"
+                               onchange="updatePercentageDescription('percentage-description-12', this.value)"/></td>
                     <td id="percentage-12"></td>
                 </tr>
                 <tr>
-                    <td><p class="percentage-description"></p></td>
+                    <td><p id="percentage-description-13"></p></td>
                     <td><label for="percentage-input-13">%</label></td>
-                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10"/></td>
+                    <td><input class="percentage-input" id="percentage-input-13" type="number" value="10"
+                               onchange="updatePercentageDescription('percentage-description-13', this.value)"/></td>
                     <td id="percentage-13"></td>
                 </tr>
             </table>
