--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <title>Weightlifting Log Home</title>
 </head>
 <body>
-<div class="container">
+<div id="logo-container">
 
     <!--Title and logo section-->
     <p>
